2006-03-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/gnu/classpath/tools/jarsigner/Main.java (setupSigningParams):
	Ask user for keystore password if one was not provided.

2006-03-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/README: Added Security tools section.
	Documented the jarsigner tool.

2006-03-25  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JScrollBar.java
	(AccessibleJScrollBar.getAccessibleStateSet): Implemented,
	(AccessibleJScrollBar.getAccessibleRole): Likewise,
	(AccessibleJScrollBar.getAccessibleValue): Likewise,
	(AccessibleJScrollBar.getCurrentAccessibleValue): Likewise,
	(AccessibleJScrollBar.setCurrentAccessibleValue): Likewise,
	(AccessibleJScrollBar.getMinimumAccessibleValue): Likewise,
	(AccessibleJScrollBar.getMaximumAccessibleValue): Likewise,
	(getAccessibleContext): Updated API docs.

2006-03-25  Tom Tromey  <tromey@redhat.com>

	* .externalToolBuilders/CreateLocaleData.launch: Run if resource files
	change or if generator script changes.

2006-03-25  Tom Tromey  <tromey@redhat.com>

	* javax/naming/ldap/StartTlsRequest.java: New file.
	* javax/naming/ldap/StartTlsResponse.java: New file.

2006-03-25  Olivier Jolly  <olivier.jolly@pcedev.com>

    * java/net/URLClassLoader.java (FileURLLoader.getResource): Added test
    to validate all components of a resource path.
    (FileURLLoader.walkPathComponents): Helper which ensures that we are
    allowed to walk through every component of a resource path.
    
2006-03-25  Michael Koch  <konqueror@gmx.de>

	* NEWS: Added item for CLDR 1.3 update.

2006-03-25  Michael Koch  <konqueror@gmx.de>

	* resource/gnu/java/locale/LocaleInformation_ar_IN.properties,
	resource/gnu/java/locale/LocaleInformation_ar_IQ.properties,
	resource/gnu/java/locale/LocaleInformation_ar_KW.properties,
	resource/gnu/java/locale/LocaleInformation_ar_LY.properties,
	resource/gnu/java/locale/LocaleInformation_mn_MN.properties,